--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Dva Demo</title>
-  <link rel="stylesheet" href="/index.css" />
-<link href="/index.css" rel="stylesheet"></head>
+  <title>Dva Todomvc</title>
+  <link rel="stylesheet" href="./index.css" />
+</head>
 <body>
   <div id="root"></div>
-<script type="text/javascript" src="/index.js"></script></body>
+  <script type="text/javascript" src="./index.js"></script>
+</body>
 </html>
